violin plots with means and bootstrapped 95% CIs

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -76,6 +76,8 @@ Stanford, CA 94305\\[20pt]
 
 \item \emph{Reviewer 1 requested more information about the ratings data to get a better sense of individual response patterns.}
 
+We have replaced most of our bar plots with the more informative violin plots that Reviewer 1 suggested. We expand on this point in our response to Reviewer 1's point 2 below.
+
 \item \emph{Reviewer 3 raised an alternative account of subjects' interpretation of `tall' in regular vs. irregular contexts.}
 
 \een
@@ -93,6 +95,10 @@ Stanford, CA 94305\\[20pt]
 \item \emph{My largest reservation is that the main result, which is that contextual predictability affects whether an interpretation is distributive or collective, is really only experimentally evaluated (in Experiment 3) for three words (big, heavy, and tall) in one context (moving boxes). The paper would be much stronger if either the number of words were broader, or the contexts were broader.}
 
 \item \emph{I really liked Experiment 2 but it is possible that these means simply reflect different distributions of extreme values. For this reason I think you should include violin plots as well as means, just to assure ourselves that that isn't happening.}
+
+We have followed this suggestion and replaced all but one of our ratings bar plots with violin plots. The new violin plots include condition means and bootstrapped 95\% confidence intervals. The plots communicate at least as much information as our original bar plots, and have the added benefit of allaying the reviewer's worry that the diverging means reflect different distributions of extreme values. The one plot that we have not replaced with a violin plot appears in Figure 4, which plots mean collective endorsement ratings for each of the 40 unique sentences tested in Expt.~2a. We chose to keep the bar plots because we found the violin plots to be uninformative at such a large scale, and because we now use violin plots in Figure 5, which zooms in on the relevant sentences from Figure 4. Here is what a violin plot of the data in Figure 4 would look like:
+
+\includegraphics[width=\linewidth]{plots/sentence_plot_violin.eps}
 
 \item \emph{I'm kind of surprised there were only two alternatives considered for the speakers knowledge state: full or sum. It seems to me that the non-regular condition corresponds to a situation that is neither: the speaker has knowledge of the individual boxes, and can kind of vaguely infer what the full set might look like (e.g., by mentally stacking them) but only noisily so.}
 
