cover letter progress

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -74,6 +74,8 @@ Stanford, CA 94305\\[20pt]
 
 \item \emph{Reviewer 1 was concerned that the effects of contextual predictability were only tested on a limited set of words and contexts.}
 
+We followed the reviewer's suggestion and ran an additional experiment (\emph{Expt.~4: Generalizing our findings}), which tests the predictions of contextual predictability and speaker knowledge with a much larger set of 25 dimensional adjectives (cf.~our original set of three). The new results replicate our original findings and add nuance to our account, highlighting an additional aspect of the pragmatic calculus of utterance disambiguation: the probability that a specific interpretation would truthfully describe a state of affairs. We expand on this point in our response to Reviewer 1's point 1 below.
+
 \item \emph{Reviewer 1 requested more information about the ratings data to get a better sense of individual response patterns.}
 
 We have replaced most of our bar plots with the more informative violin plots that Reviewer 1 suggested. We expand on this point in our response to Reviewer 1's point 2 below.
@@ -92,7 +94,9 @@ We have replaced most of our bar plots with the more informative violin plots th
 
 \ben
 
-\item \emph{My largest reservation is that the main result, which is that contextual predictability affects whether an interpretation is distributive or collective, is really only experimentally evaluated (in Experiment 3) for three words (big, heavy, and tall) in one context (moving boxes). The paper would be much stronger if either the number of words were broader, or the contexts were broader.}
+\item \emph{My largest reservation is that the main result, which is that contextual predictability affects whether an interpretation is distributive or collective, is really only experimentally evaluated (in Experiment 3) for three words (\emph{big}, \emph{heavy}, and \emph{tall}) in one context (moving boxes). The paper would be much stronger if either the number of words were broader, or the contexts were broader.}
+
+We have followed the reviewer's suggestion, investigating contextual predictability and speaker knowledge with a much broader set of predicates (\emph{Expt.~4: Generalizing our findings}). We extended the Cubert paraphrase endorsement paradigm from Expt.~3, testing a total of 25 dimensional adjectives (cf.~the three predicates tested in Expt.~3). We grouped these adjectives into seven different semantic classes (capacity, depth, height, length, size, weight, and width) and two polarities (positive and negative; e.g., \emph{tall} vs. \emph{short}). The results of the new experiment 1) replicate the results of Expt.~3 with a broader set of lexical items, and 2) add nuance to our claims about contextual predictability. We continue to find that collective interpretations depend on the contextual predictability of collective properties, such that increasing predictability by regularizing arrangements increases rates of collective interpretations. However, to increase predictability one must regularize the specific dimension under discussion (e.g., the height dimension for \emph{tall} but not \emph{long}, or the width dimension for \emph{narrow} but not \emph{deep}). Moreover, we observed that contextual predictability interacts with yet another aspect of the pragmatic calculus that influences interpretation choice, namely the probability that a specific interpretation would truthfully describe a state of affairs. When an interpretation appears unlikely to be true (e.g., describing a tall stack of boxes as collectively short), listeners are unlikely to attribute that interpretation to speakers' utterances. \gcs{add more}
 
 \item \emph{I really liked Experiment 2 but it is possible that these means simply reflect different distributions of extreme values. For this reason I think you should include violin plots as well as means, just to assure ourselves that that isn't happening.}
 
@@ -143,9 +147,13 @@ We have followed this suggestion and replaced all but one of our ratings bar plo
 
 \item \emph{For experiment 2, I wonder if some of the nouns are really plural (\emph{conditions}, \emph{results}).}
 
+This is a reasonable concern about our corpus-based experimental items, which we selected solely on the basis of frequency of occurrence. We ran the follow-up in Expt.~2a with a more targeted set of items in part to allay this concern. There, subject nouns denoted real-world (as opposed to abstract or psychological) entities.
+
 \item \emph{For experiment 2, some of the collective interpretations imply a distributive one (\emph{the dogs were quiet}).}
 
-\item \emph{In experiment 2's irregular conditions, maybe the participants are thinking: Cubert wouldn't say the boxes were collectively tall unless they were collectively VERY tall; so here he must have been referring to the individual boxes. Admittedly, I'm not sure how this would apply to ``big''. This alternative story suggests that you should control for the actual height of the boxes when predicting responses. Maybe the difference between ``regular'' and ``irregular'' conditions just reflects the difference in total average height in the ``tall'' case.}
+\item \emph{In experiment 3's irregular conditions, maybe the participants are thinking: Cubert wouldn't say the boxes were collectively tall unless they were collectively VERY tall; so here he must have been referring to the individual boxes. Admittedly, I'm not sure how this would apply to ``big''. This alternative story suggests that you should control for the actual height of the boxes when predicting responses. Maybe the difference between ``regular'' and ``irregular'' conditions just reflects the difference in total average height in the ``tall'' case.}
+
+The results of our new experiment (\emph{Expt.~4: Generalizing our findings}) explore and support this intuition: the probability that a specific interpretation would truthfully describe a state of affairs enters into the pragmatic calculus of utterance disambiguation. As suspected, interpretations that are more likely to be true (e.g., a collective interpretation for \emph{narrow} with a tall, thin stack of boxes) are more likely. We expand on this finding in our discussion of Expt.~4's results. \gcs{add more depending on whether we include the polarity model}
 
 \een
 
