working on responses to Reviewer 2

--- a/writing/Cubert/revision/Cubert cover letter.tex
+++ b/writing/Cubert/revision/Cubert cover letter.tex
@@ -108,7 +108,11 @@ We have followed this suggestion and replaced all but one of our ratings bar plo
 
 \item \emph{I'm kind of surprised there were only two alternatives considered for the speakers knowledge state: full or sum. It seems to me that the non-regular condition corresponds to a situation that is neither: the speaker has knowledge of the individual boxes, and can kind of vaguely infer what the full set might look like (e.g., by mentally stacking them) but only noisily so.}
 
+\gcs{response will depend on whether we include the plural predication arrangement model}
+
 \item \emph{There needs to be more information about the experimental participants. Nationality? Age? How much were they paid?}
+
+\gcs{got info; how much should we include and where should we put it?}
 
 \een
 
@@ -118,15 +122,22 @@ We have followed this suggestion and replaced all but one of our ratings bar plo
 
 \ben
 
-\item \emph{The authors should situate their findings against the backdrop of our previous experimental work on \emph{each} and \emph{together}.}
+\item \emph{The authors should situate their findings against the backdrop of our previous experimental work on \emph{each} and \emph{together}. Haven’t we already established (first theoretically/introspectively, then experimentally across various paradigms) that \emph{each} and \emph{together} disambiguate sentences for adults, and that the interpretation of potentially ambiguous sentences is influenced by pragmatic knowledge?}
+
+All of the previous experimental work that the reviewer mentions investigates post-VP \emph{together} (e.g., \emph{the boxes were big together}), whereas our experiments target post-NP \emph{together} (e.g., \emph{the boxes together were big}). We chose post-NP \emph{together} to avoid the spatiotemporal interpretation of post-VP \emph{together} (cf.~our response to Reviewer 2's point 4 below). While we have followed the reviewer's advice to reference the experiments by Syrett and Musolino, we are careful to highlight the fact that the disambiguating potential of post-NP \emph{together} had not been previously established empirically.
 
 \item \emph{The authors should highlight the role of the speaker's epistemic state.}
 
 \item \emph{The authors set up the contrast between distributive and collective interpretations without mentioning the possibility of cumulative interpretations. This reading should be mentioned.}
 
-\item \emph{The authors repeatedly refer to \emph{together} as though it unambiguously signals a collective interpretation, but this is most definitely not the case! Cite previous experimental work on the flexbility of \emph{together}.}
+\item \emph{The authors repeatedly refer to \emph{together} as though it unambiguously signals a collective interpretation, but this is most definitely not the case!}
 
-\item \emph{The authors take participants' willingness to accept the sentence The NOUNS together were ADJECTIVE as compatible with the speaker's intended meaning as an indication of their willingness to allow a collective interpretation of the target sentence. But this is inherently problematic, because that sentence does not unambiguously signal a collective meaning to the participant! Take the following example: ``The boys together were smiling.'' The true `collective' interpretation of this sentence is that each boy contributed in such a way that collectively the boys created what can be truthfully described as a smiling event, and no one boy has this property, while the group does.}
+The reviewer references previous work that establishes the flexibility of post-VP \emph{together}: as sentence like \emph{the boy and the girl biffed together} allows a spatiotemporal, synchronous distributive interpretation whereby the boy and the girl are close as each of them biffs at the same time. However, we lack evidence of a similar flexibility for post-NP \emph{together}, which is why we used it in our experimental materials and tested its disambiguating potential in Expt.~1. Indeed, the previous experimental work that the reviewer recommended distinguishes the two versions of \emph{together}: 
+``post-VP together attaches to the right of the VP and modifies the event, giving rise to multiple interpretations [(i.e., to collective and synchronous distriutive interpretations)], while post-NP together attaches to the left of the VP and requires the predicate in question to apply to the plurality (e.g., John and Mary), giving rise to an obligatorily collective reading'' (Syrett and Muslino, 2016, fn.~1). The consensus in the literature, together with the results of our Expt.~1, suggest that post-NP together does unambiguously signal a collective interpretation, which is why we refer to it as such.
+
+\item \emph{The authors take participants' willingness to accept the sentence \emph{The NOUNS together were ADJECTIVE} as compatible with the speaker's intended meaning as an indication of their willingness to allow a collective interpretation of the target sentence. But this is inherently problematic, because that sentence does not unambiguously signal a collective meaning to the participant! Take the following example: ``The boys together were smiling.'' The true `collective' interpretation of this sentence is that each boy contributed in such a way that collectively the boys created what can be truthfully described as a smiling event, and no one boy has this property, while the group does.}
+
+``the non-distributive [(i.e., collective)], \emph{together} construal of a sentence doesn't entail the falsehood of the distributive, \emph{each} version'' (Schwarzschild, 1994, p.~212)
 
 \item \emph{Participants may have been inserting a silent collectivizing noun (e.g., \emph{box}, \emph{pile}, \emph{stack}) into the together sentences.}
 
@@ -136,7 +147,7 @@ We have followed this suggestion and replaced all but one of our ratings bar plo
 
 \item \emph{Don't predicates such as \emph{have brown eyes} have to apply at the atomic level? If so, then aren't there predicates out there for which young language learners must learn that they obligatorily apply to atomic individuals that are members of a plurality? And if this is the case, then couldn't \emph{big} and \emph{tall} be stubbornly distributive at the lexical level?}
 
-\item \emph{If there are predicates like gather that must apply at the level of the group (i.e., they are stubbornly collective) why is it not unreasonable to think that these predicates contrast with another category, whose denotation requires them to apply at the atomic level, and another category, which are flexible in the level to which they apply?}
+\item \emph{If there are predicates like \emph{gather} that must apply at the level of the group (i.e., they are stubbornly collective) why is it not unreasonable to think that these predicates contrast with another category, whose denotation requires them to apply at the atomic level, and another category, which are flexible in the level to which they apply?}
 
 \item \emph{I am not able to interpret \emph{These boxes are big} collectively. (I am a native speaker of American English.) I can, however, maybe access a collective interpretation of \emph{These boxes are tall}. This paper doesn't allow me to understand why I am encountering an introspective difference between these two predicates, or why we see one in the experimental results.}
 
