--- a/writing/Cubert/revision/Cubert revision.tex
+++ b/writing/Cubert/revision/Cubert revision.tex
@@ -407,7 +407,7 @@ One way to access interpretations of potentially ambiguous plural predications i
 \a.\label{each} The boxes \textbf{each} were big/heavy/tall.
 \b.\label{together} The boxes \textbf{together} were big/heavy/tall.
 
-Although many theorists assume the success of these disambiguating particles \citep[e.g.,][]{schwarzschild1994}, diligence is due: we must establish that these are in fact unambiguous paraphrases in the context of our experimental paradigm. We do so by asking participants to choose between two collections of boxes as the referent of each definite description in \ref{bare}, \ref{each}, and \ref{together}; the objects in one collection hold the property individually (but not collectively), while the other collection hold the property (but the individuals in it do not).
+Although many theorists assume the success of these disambiguating particles \citep[e.g.,][]{schwarzschild1994}, diligence is due: we must establish that these are in fact unambiguous paraphrases in the context of our experimental paradigm.\footnote{Previous experimental work has investigated the disambiguating potential of \emph{each} and so-called ``post-VP'' \emph{together} (i.e., \emph{the boxes were big together}). \citet{syrettmusolino2013,syrettmusolino2016} found that these particles reliably disambiguate between distributive and collective interpretations for adults. However, we are aware of no empirical work on post-NP \emph{together}, which we employ in our experimental materials.} We do so by asking participants to choose between two collections of boxes as the referent of each definite description in \ref{bare}, \ref{each}, and \ref{together}; the objects in one collection hold the property individually (but not collectively), while the other collection hold the property (but the individuals in it do not).
 We expect the two disambiguated sentences to lead to robust selection of the corresponding collection, while selections for the ambiguous sentence will indicate preferences for its interpretation.
 In addition, we begin to explore the role of context by manipulating the plausible knowledge of the speaker: whether he is likely to have access to the relevant information about each object, or only about the collection.
 
