--- a/writing/Cubert/revision/greg.bib
+++ b/writing/Cubert/revision/greg.bib
@@ -2,12 +2,34 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2016-04-29 13:54:17 -0700 
+%% Created for Greg Scontras at 2016-06-08 09:26:25 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{syrettmusolino2013,
+	Author = {Kristen Syrett and Julien Musolino},
+	Date-Added = {2016-06-08 16:25:21 +0000},
+	Date-Modified = {2016-06-08 16:26:25 +0000},
+	Journal = {Language Acquisition},
+	Number = {4},
+	Pages = {259-291},
+	Title = {Collectivity, Distributivity, and the Interpretation of Plural Numerical Expressions in Child and Adult Language},
+	Volume = {20},
+	Year = {2013}}
+
+@article{syrettmusolino2016,
+	Author = {Kristen Syrett and Julien Musolino},
+	Date-Added = {2016-06-08 16:23:27 +0000},
+	Date-Modified = {2016-06-08 16:25:18 +0000},
+	Journal = {Language Acquisition},
+	Number = {2},
+	Pages = {175-197},
+	Title = {All together now: Disentangling semantics and pragmatics with \emph{together} in child and adult language},
+	Volume = {23},
+	Year = {2016}}
 
 @book{schein,
 	Address = {Cambridge, MA},
